# agents-lucas-lindh

./: .gitignore  README.md  pyproject.toml
nackademin-langchain-demo/: .env.example  README.md  requirements.txt
nackademin-langchain-demo/agents/: README.me
nackademin-langchain-demo/agents/agent1/: gmail_tools.py  main.py
nackademin-langchain-demo/agents/agent2/: file_tools.py  main.py
nackademin-langchain-demo/agents/agent3/: build_monitor_faq_docs.py  main.py  test_embeddings.py
nackademin-langchain-demo/examples/agent-lecture/: agent_with_custom_params.py  agent_with_memory.py  agent_with_tool.py  file_reader.py  rag_agent.py  simple_agent.py  structured_output.py  web_fetcher.py
nackademin-langchain-demo/examples/tool_lecture/: mcp_agent.py
nackademin-langchain-demo/util/: embeddings.py  models.py  tools.py
